# atri-elo-old

./: .gitignore  Cargo.toml  LICENSE  README.md
atri-elo-backend/: API.md  Cargo.toml
atri-elo-backend/docs/: contests.md  leaderboard.md  players.md
atri-elo-backend/src/: api.rs  general.rs  main.rs  util.rs
atri-elo-common/: Cargo.toml
atri-elo-common/src/: lib.rs  test.rs
atri-elo-frontend/: Cargo.toml
atri-elo-mplink/: Cargo.toml  match_ids.json
atri-elo-mplink/src/: main.rs
atri-elo-server/: Cargo.toml
atri-elo-server/docs/: contests.md  players.md
atri-elo-server/src/: api.rs  general.rs  main.rs  pages.rs  util.rs
atri-elo-server/src/pages/: mod.rs  oauth.rs  root.rs  user.rs
