[package]
name = "atri-elo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atri-elo-common = { path = "../atri-elo-common" }
axum = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
