[package]
name = "atri-elo-mplink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "5"
gjson = "0.8"
reqwest = { version = "0.11", features = ["blocking"]}
serde_json = "1"
itertools = "0.10"
atri-elo-common = { path = "../atri-elo-common" }
