[package]
name = "atri-elo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atri-elo-common = { path = "../atri-elo-common" }
axum = "0.4"
time = { version = "0.3", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flexbuffers = "2"
sled = "0.34"
color-eyre = "0.5"
tokio = { version = "1", features = ["full"] }
oauth2 = "4.1"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "time",
    "tracing-log",
] }
itconfig = { version = "1.1", features = ["macro"] }
